--- a/.github/workflows/deploy-docs.yaml
+++ b/.github/workflows/deploy-docs.yaml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          ssh-key: ${{secrets.new}}
+          ssh-key: ${{secrets.SSH_PRIVATE_KEY}}
 
       - name: Setup Node.js
         uses: actions/setup-node@v2
