--- a/.github/workflows/deploy-docs.yaml
+++ b/.github/workflows/deploy-docs.yaml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          ssh-key: ${{secrets.SSH_PRIVATE_KEY}}
+          ssh-key: ${{secrets.new}}
 
       - name: Setup Node.js
         uses: actions/setup-node@v2
@@ -34,6 +34,8 @@ jobs:
 
       - name: Deploy storybook
         working-directory: ./packages/docs
+        with:
+          ssh-key: ${{secrets.new}}
         env:
           GH_TOKEN: ${{secrets.GITHUB_TOKEN}}
         run: |
